--- a/1/EomTool/EomApp1/packages.config
+++ b/1/EomTool/EomApp1/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="AutoMapper" version="2.1.267" targetFramework="net40-Client" />
   <package id="Common.Logging" version="2.0.0" targetFramework="net40-Client" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net40-Client" />
   <package id="PetaPoco" version="4.0.3" targetFramework="net40-Client" />
 </packages>
