web: show pub-attachments

--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -2663,6 +2663,7 @@
     <Content Include="Views\PaymentBatches\PubNotes.cshtml" />
     <Content Include="Views\PaymentBatches\Summary.cshtml" />
     <Content Include="Views\PaymentBatches\PubNotesInfrastructure.cshtml" />
+    <Content Include="Views\PaymentBatches\PubAttachments.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
