pbatch stuff- ready for trial run

--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -2664,6 +2664,7 @@
     <Content Include="Views\PaymentBatches\Summary.cshtml" />
     <Content Include="Views\PaymentBatches\PubNotesInfrastructure.cshtml" />
     <Content Include="Views\PaymentBatches\PubAttachments.cshtml" />
+    <Content Include="Views\PaymentBatches\PubAttachmentsInfrastructure.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
